chore: sync latest product updates
